@@ -6,7 +6,9 @@ import com.postapp.postapp.entities.Comment;
 import org.mapstruct.*;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(unmappedTargetPolicy = ReportingPolicy.IGNORE,
         componentModel = "spring",
@@ -23,9 +25,11 @@ public interface CommentMapper {
 
     // Comment → CommentResponseDto
     @Mapping(target = "authorUsername", source = "user.username")
+    @Mapping(target = "userId", source = "user.id")
     @Mapping(target = "postId", source = "post.id")
     @Mapping(target = "parentCommentId", source = "parent.id")
     @Mapping(target = "likeCount", expression = "java(comment.getLikes() != null ? comment.getLikes().size() : 0)")
+    @Mapping(target = "replyCount", expression = "java(comment.getChildren() != null ? comment.getChildren().size() : 0)")
     @Mapping(target = "children", qualifiedByName = "mapChildren")
     @Mapping(target = "authorAvatar", source = "user.avatar")
     CommentResponseDto toResponseDto(Comment comment);
@@ -35,8 +39,12 @@ public interface CommentMapper {
 
     @Named("mapChildren")
     default List<CommentResponseDto> mapChildren(List<Comment> children) {
+        if (children == null) {
+            return new ArrayList<>();
+        }
         return children.stream()
                 .map(this::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
+
 }
